--- a/hub.html
+++ b/hub.html
@@ -19,14 +19,14 @@
    <meta name="author" content="AozoraLabs by Marcello Palmitessa"/>
    
    <!-- remove or comment this line if you want to use the local fonts -->
-   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
+   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
 
    <link rel="stylesheet" type="text/css" href="content/css/bootstrap.css">
    <link rel="stylesheet" type="text/css" href="content/css/bootstrap-responsive.css">
    <link rel="stylesheet" type="text/css" href="content/css/bootmetro.css">
    <link rel="stylesheet" type="text/css" href="content/css/bootmetro-tiles.css">
    <link rel="stylesheet" type="text/css" href="content/css/bootmetro-charms.css">
-   <link rel="stylesheet" type="text/css" href="content/css/metro-ui-semilight.css">
+   <link rel="stylesheet" type="text/css" href="content/css/metro-ui-light.css">
    <link rel="stylesheet" type="text/css" href="content/css/icomoon.css">
 
    <!--  these two css are to use only for documentation -->
@@ -43,7 +43,7 @@
    <!-- All JavaScript at the bottom, except for Modernizr and Respond.
       Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
       For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
-   <script src="scripts/modernizr.min.js"></script>
+   <script src="scripts/modernizr-2.6.1.min.js"></script>
 
    <script type="text/javascript">
       var _gaq = _gaq || [];
@@ -57,7 +57,7 @@
    </script>
 </head>
 
-<body data-accent="blue">
+<body>
   <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
@@ -82,10 +82,10 @@
                   <li><a href="./appbar-demo.html">Demo App-Bar</a></li>
                   <li><a href="./table.html">Demo Table</a></li>
                   <li><a href="./icons.html">Icons</a></li>
-                  <li><a href="./bootstrap-scaffolding.html">Bootstrap Scaffolding</a></li>
-                  <li><a href="./bootstrap-base-css.html">Bootstrap Base CSS</a></li>
-                  <li><a href="./bootstrap-components.html">Bootstrap Components</a></li>
-                  <li><a href="./bootstrap-javascript.html">Bootstrap Javascript</a></li>
+                  <li><a href="./scaffolding.html">Bootstrap Scaffolding</a></li>
+                  <li><a href="./base-css.html">Bootstrap Base CSS</a></li>
+                  <li><a href="./components.html">Bootstrap Components</a></li>
+                  <li><a href="./javascript.html">Bootstrap Javascript</a></li>
                   <li class="divider"></li>
                   <li><a href="./index.html">Home</a></li>
                </ul>
@@ -177,7 +177,7 @@
    
                   <h2>Bootstrap Metro</h2>
    
-                  <a class="tile wide imagetext bg-color-blue" href="./bootstrap-scaffolding.html">
+                  <a class="tile wide imagetext bg-color-blue" href="./scaffolding.html">
                      <div class="image-wrapper">
                         <img src="content/img/My Apps.png" />
                      </div>
@@ -189,7 +189,7 @@
                      <span class="app-label">SCAFFOLDING</span>
                   </a>
    
-                  <a class="tile wide imagetext bg-color-blueDark" href="./bootstrap-base-css.html">
+                  <a class="tile wide imagetext bg-color-blueDark" href="./base-css.html">
                      <div class="image-wrapper">
                         <img src="content/img/Coding app.png" />
                      </div>
@@ -202,14 +202,14 @@
                      <span class="app-label">BASE CSS</span>
                   </a>
    
-                  <a class="tile app bg-color-orange" href="./bootstrap-components.html">
+                  <a class="tile app bg-color-orange" href="./components.html">
                      <div class="image-wrapper">
                         <img src="content/img/RegEdit.png" alt="" />
                      </div>
                      <span class="app-label">COMPONENTS</span>
                   </a>
    
-                  <a class="tile app bg-color-red" href="./bootstrap-javascript.html">
+                  <a class="tile app bg-color-red" href="./javascript.html">
                      <div class="image-wrapper">
                         <img src="content/img/Devices.png" alt="" />
                      </div>
@@ -218,39 +218,39 @@
    
                </div>
    
-               <div id="section3" class="metro-section tile-span-2">
-                  <h2>Category 3</h2>
-                  <div class="tile tile-double bg-color-blue">
-                     <div class="tile-icon-large">
-                        <img src="content/img/Live%20SkyDrive.png" />
-                     </div>
-                     <span class="tile-label">Live SkyDrive</span>
-                  </div>
-                  <div class="tile bg-color-blueDark">
-                     <div class="tile-icon-large">
-                        <img src="content/img/Bluetooth.png" />
-                     </div>
-                     <span class="tile-label">Bluetooth</span>
-                  </div>
-                  <div class="tile bg-color-red">
-                     <div class="tile-icon-large">
-                        <img src="content/img/Control%20Panel.png" />
-                     </div>
-                     <span class="tile-label">Control Panel</span>
-                  </div>
-                  <div class="tile bg-color-green">
-                     <div class="tile-icon-large">
-                        <img src="content/img/Signal.png" />
-                     </div>
-                     <span class="tile-label">WiFi Settings</span>
-                  </div>
-                  <div class="tile bg-color-yellow">
-                     <div class="tile-icon-large">
-                        <img src="content/img/Computer%20alt%202.png" />
-                     </div>
-                     <span class="tile-label">My Computer</span>
-                  </div>
-               </div>
+               <!--<div id="section3" class="metro-section tile-span-2">-->
+                  <!--<h2>Category 3</h2>-->
+                  <!--<div class="tile tile-double bg-color-blue">-->
+                     <!--<div class="tile-icon-large">-->
+                        <!--<img src="content/img/Live%20SkyDrive.png" />-->
+                     <!--</div>-->
+                     <!--<span class="tile-label">Live SkyDrive</span>-->
+                  <!--</div>-->
+                  <!--<div class="tile bg-color-blueDark">-->
+                     <!--<div class="tile-icon-large">-->
+                        <!--<img src="content/img/Bluetooth.png" />-->
+                     <!--</div>-->
+                     <!--<span class="tile-label">Bluetooth</span>-->
+                  <!--</div>-->
+                  <!--<div class="tile bg-color-red">-->
+                     <!--<div class="tile-icon-large">-->
+                        <!--<img src="content/img/Control%20Panel.png" />-->
+                     <!--</div>-->
+                     <!--<span class="tile-label">Control Panel</span>-->
+                  <!--</div>-->
+                  <!--<div class="tile bg-color-green">-->
+                     <!--<div class="tile-icon-large">-->
+                        <!--<img src="content/img/Signal.png" />-->
+                     <!--</div>-->
+                     <!--<span class="tile-label">WiFi Settings</span>-->
+                  <!--</div>-->
+                  <!--<div class="tile bg-color-yellow">-->
+                     <!--<div class="tile-icon-large">-->
+                        <!--<img src="content/img/Computer%20alt%202.png" />-->
+                     <!--</div>-->
+                     <!--<span class="tile-label">My Computer</span>-->
+                  <!--</div>-->
+               <!--</div>-->
    
             </div>
    
@@ -295,8 +295,8 @@
    </div>
 
    <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
-   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-   <script>window.jQuery || document.write("<script src='scripts/jquery-1.7.2.min.js'>\x3C/script>")</script>
+   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+   <script>window.jQuery || document.write("<script src='scripts/jquery-1.8.2.min.js'>\x3C/script>")</script>
 
    <script type="text/javascript" src="scripts/google-code-prettify/prettify.js"></script>
    <script type="text/javascript" src="scripts/jquery.mousewheel.js"></script>
