--- a/javascript.html
+++ b/javascript.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <head>
    <meta charset="utf-8" />
    <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
@@ -28,6 +27,8 @@
    <link rel="stylesheet" type="text/css" href="content/css/bootmetro-charms.css">
    <link rel="stylesheet" type="text/css" href="content/css/metro-ui-light.css">
    <link rel="stylesheet" type="text/css" href="content/css/icomoon.css">
+   <link rel="stylesheet" type="text/css" href="content/css/datepicker.css">
+   <link rel="stylesheet" type="text/css" href="content/css/daterangepicker.css">
 
    <!--  these two css are to use only for documentation -->
    <link rel="stylesheet" type="text/css" href="content/css/demo.css">
@@ -58,9 +59,9 @@
 </head>
 
 <body>
-  <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
-       chromium.org/developers/how-tos/chrome-frame-getting-started -->
-  <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
+   <!--[if lt IE 7]>
+   <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+   <![endif]-->
 
    <!-- Subhead
    ================================================== -->
@@ -135,6 +136,7 @@
              <li><a href="#carousel"><i class="icon-chevron-right"></i> Carousel</a></li>
              <li><a href="#typeahead"><i class="icon-chevron-right"></i> Typeahead</a></li>
              <li><a href="#affix"><i class="icon-chevron-right"></i> Affix</a></li>
+              <li><a href="#datepicker"><i class="icon-chevron-right"></i> DatePicker</a></li>
            </ul>
          </div>
          <div class="span9">
@@ -1756,7 +1758,43 @@
              </table>
            </section>
    
+           <section id="datepicker">
+              <div class="page-header">
+                 <h1>DatePicker <small></small></h1>
+              </div>
+               <p>Code from: <a href="http://www.eyecon.ro/bootstrap-datepicker/">http://www.eyecon.ro/bootstrap-datepicker/</a></p>
    
+              <p>Attached to a field with the format specified via options.</p>
+              <div class="bs-docs-example">
+                 <input type="text" id="dp1" value="02-16-2012" class="span2 datepicker">
+              </div>
+   <pre class="prettyprint linenums">
+   &lt;input type="text" id="dp1" value="02-16-2012" class="span2 datepicker"&gt;
+   </pre>
+   
+              <p>Attachet to a field with the format specified via data tag.</p>
+              <div class="bs-docs-example">
+                 <input type="text" id="dp2" data-date-format="mm/dd/yy" value="02/16/12" class="span2 datepicker">
+              </div>
+   <pre class="prettyprint linenums">
+   &lt;input type="text" id="dp2" data-date-format="mm/dd/yy" value="02-16-2012" class="span2 datepicker"&gt;
+   </pre>
+   
+              <p>As component.</p>
+              <div class="bs-docs-example">
+                 <div data-date-format="dd-mm-yyyy" data-date="12-02-2012" id="dp3" class="input-append datepicker">
+                    <input type="text" readonly="" value="12-02-2012" size="16" class="span2">
+                    <span class="add-on"><i class="icon-calendar"></i></span>
+                 </div>
+              </div>
+   <pre class="prettyprint linenums">
+   &lt;div data-date-format="dd-mm-yyyy" data-date="12-02-2012" id="dp3" class="input-append datepicker"&gt;
+      &lt;input type="text" readonly="" value="12-02-2012" size="16" class="span2"&gt;
+      &lt;span class="add-on"&gt;&lt;i class="icon-calendar"&gt;&lt;/i&gt;&lt;/span&gt;
+      &lt;/div&gt;
+   </pre>
+   
+           </section>
    
          </div>
        </div>
@@ -1802,6 +1840,8 @@
    <script type="text/javascript" src="scripts/bootmetro-charms.js"></script>
    <script type="text/javascript" src="scripts/demo.js"></script>
    <script type="text/javascript" src="scripts/holder.js"></script>
+   <script type="text/javascript" src="scripts/bootstrap-datepicker.js"></script>
+   <script type="text/javascript" src="scripts/daterangepicker.js"></script>
 
    <script type="text/javascript">
       $(".metro").metro();
