--- a/javascript.html
+++ b/javascript.html
@@ -305,9 +305,9 @@
                 </div>
              </div>
              <div class="bs-docs-example" style="padding-bottom: 24px;">
-                <a data-toggle="modal" href="#myModal" class="btn btn-primary btn-large">Show Flyout (classic modal)</a>
-                <a data-toggle="modal" href="#myModal2" class="btn btn-success btn-large">Show Metro Message</a>
-                <a data-toggle="modal" href="#myModal3" class="btn btn-warning btn-large">Show Error/Warning</a>
+                <a data-toggle="modal" href="#myModal" class="btn btn-primary">Show Flyout (classic modal)</a>
+                <a data-toggle="modal" href="#myModal2" class="btn btn-success">Show Metro Message</a>
+                <a data-toggle="modal" href="#myModal3" class="btn btn-warning">Show Error/Warning</a>
              </div>
    
    <pre class="prettyprint linenums">
