--- a/appbar-demo.html
+++ b/appbar-demo.html
@@ -79,7 +79,9 @@
                   <li><a href="./listviews.html">ListViews</a></li>
                   <li><a href="./appbar-demo.html">Demo App-Bar</a></li>
                   <li><a href="./table.html">Demo Table</a></li>
+                  <li><a href="./wizard.html">Demo Table</a></li>
                   <li><a href="./icons.html">Icons</a></li>
+                  <li class="divider"></li>
                   <li><a href="./scaffolding.html">Bootstrap Scaffolding</a></li>
                   <li><a href="./base-css.html">Bootstrap Base CSS</a></li>
                   <li><a href="./components.html">Bootstrap Components</a></li>
@@ -112,14 +114,14 @@
    <div class="container-fluid">
       <div class="row-fluid">
          <div class="span12">
-            <h6>This page show a full Application Bar stacked on the bottom of the page with plenty of commands.</h6>
+            <p>This page show a full Application Bar stacked on the bottom of the page with plenty of commands.</p>
             <br />
    
             <form class="">
                <label for="appbar-theme-select">Change ApplicationBar theme:</label>
                <select id="appbar-theme-select" class="">
-                  <option value="win-ui-light">Light</option>
                   <option value="win-ui-dark">Dark</option>
+                  <option value="win-ui-light">Light</option>
                </select>
             </form>
    
@@ -142,7 +144,7 @@
    </div>
    
    
-   <footer class="win-commandlayout navbar-fixed-bottom">
+   <footer class="win-commandlayout navbar-fixed-bottom win-ui-dark">
       <div class="container">
          <div class="row">
             <div class="span6 align-left">
@@ -218,10 +220,6 @@
                   <span class="win-label">User</span>
                </button>
    
-               <button class="win-command">
-                  <span class="win-commandimage win-commandring">&#xE15E;</span>
-                  <span class="win-label">Users</span>
-               </button>
             </div>
          </div>
       </div>
