--- a/components.html
+++ b/components.html
@@ -344,10 +344,9 @@
              <p>Make a set of buttons appear vertically stacked rather than horizontally.</p>
              <div class="bs-docs-example">
                <div class="btn-group btn-group-vertical">
-                 <button type="button" class="btn"><i class="icon-align-left"></i></button>
-                 <button type="button" class="btn"><i class="icon-align-center"></i></button>
-                 <button type="button" class="btn"><i class="icon-align-right"></i></button>
-                 <button type="button" class="btn"><i class="icon-align-justify"></i></button>
+                 <button type="button" class="btn"><i class="icon-paragraph-left"></i></button>
+                 <button type="button" class="btn"><i class="icon-paragraph-center"></i></button>
+                 <button type="button" class="btn"><i class="icon-paragraph-right"></i></button>
                </div>
              </div>
    <pre class="prettyprint linenums">
