Added new metro layout

--- a/hub.html
+++ b/hub.html
@@ -117,7 +117,7 @@
    
                <div id="section1" class="metro-section tile-span-4">
    
-                  <h2>MetroUI Demos</h2>
+                  <h2>BootMetro Demos</h2>
    
                   <a class="tile wide imagetext bg-color-blueDark" href="./tiles-templates.html">
                      <div class="image-wrapper">
