--- a/index.html
+++ b/index.html
@@ -60,32 +60,6 @@
    <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
    <![endif]-->
 
-   <!--
-   <div id="hero" class="container-fluid" xmlns="http://www.w3.org/1999/html">
-      <div class="row-fluid">
-   
-         <header class="jumbotron masthead">
-            <div class="inner span5">
-               <h1>BootMetro</h1>
-               <h2>Metro style web framework</h2>
-               <p>Simple and flexible HTML, CSS, and Javascript for web apps that wants to use the "Windows 8 MetroUI" style, without the need to run on Windows 8.</p>
-               <p>
-                  <a href="https://github.com/aozora/bootmetro/zipball/master" class="btn btn-large btn-primary btn-success">
-                     Download Now <small>it's free</small>
-                     <b class="icon-arrow-right-7"></b>
-                  </a>
-                  <br/>
-                  <span class="label label-success">Latest version: 0.6</span>
-               </p>
-            </div>
-            <div class="span7">
-               <img id="hero-image" class="pull-right" width="500" height="265" src="content/img/hero4.png" alt="hero">
-            </div>
-         </header>
-   
-      </div>
-   </div>
-   -->
    <header id="hero" class="">
    
          <div class="jumbotron masthead">
@@ -100,9 +74,14 @@
                            Download Now
                            <i class="icon-arrow-right-7"></i>
                         </a>
-                        <span>it's free</span>
+                        <span class="muted">it's free</span>
                         <br/>
                         <span class="label label-success">Latest version: 0.6</span>
+                        &nbsp;
+                        <a class="link" href="https://github.com/aozora/bootmetro/wiki/Roadmap">
+                           Roadmap
+                           <i class="icon-arrow-right-7"></i>
+                        </a>
                      </p>
                   </div>
                   <div class="span7">
@@ -217,8 +196,11 @@
    
    </div>
    
-   
-   
+   <div class="marketing container-fluid">
+      <h1>Who's tweeting about Bootmetro ?</h1>
+      <a class="twitter-timeline" href="https://twitter.com/search?q=%23bootmetro" data-widget-id="265787903525916672">Tweets about "#bootmetro"</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+   </div>
    <div id="charms" class="win-ui-dark">
    
       <div id="theme-charms-section" class="charms-section">
