--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <span class="label label-success">Latest version: 0.6</span>
                         &nbsp;
                         <a class="link" href="https://github.com/aozora/bootmetro/wiki/Roadmap">
-                           Roadmap
+                           roadmap
                            <i class="icon-arrow-right-7"></i>
                         </a>
                      </p>
