--- a/hub.html
+++ b/hub.html
@@ -119,6 +119,16 @@
    
                   <h2>BootMetro Demos</h2>
    
+                  <a class="tile wide imagetext bg-color-orange" href="./metro-layouts.html">
+                     <div class="image-wrapper">
+                        <img src="content/img/metro-tiles.jpg" />
+                     </div>
+                     <div class="column-text">
+                        <div class="text4">Demos of various Metro style layouts.</div>
+                     </div>
+                     <div class="app-label">Layouts</div>
+                  </a>
+   
                   <a class="tile wide imagetext bg-color-blueDark" href="./tiles-templates.html">
                      <div class="image-wrapper">
                         <img src="content/img/metro-tiles.jpg" />
@@ -157,18 +167,25 @@
                      <span class="app-label">[TODO] Charms</span>
                   </a>
    
-                  <a class="tile app bg-color-yellow" href="./images.html">
-                     <div class="image-wrapper">
-                        <span class="icon icon-images"></span>
-                     </div>
-                     <span class="app-label">[TODO] Images</span>
-                  </a>
+                  <!--<a class="tile app bg-color-yellow" href="./images.html">-->
+                     <!--<div class="image-wrapper">-->
+                        <!--<span class="icon icon-images"></span>-->
+                     <!--</div>-->
+                     <!--<span class="app-label">[_TODO] Images</span>-->
+                  <!--</a>-->
    
                   <a class="tile app bg-color-blueDark" href="./icons.html">
                      <div class="image-wrapper">
                         <span class="icon icon-IcoMoon" ></span>
                      </div>
                      <span class="app-label">Icons</span>
+                  </a>
+   
+                  <a class="tile app bg-color-purple" href="./metro-components.html">
+                     <div class="image-wrapper">
+                        <span class="icon icon-list-2"></span>
+                     </div>
+                     <span class="app-label">Metro Components</span>
                   </a>
    
                </div>
@@ -266,13 +283,11 @@
    </div>
    
    
-   <div id="charms" class="win-ui-dark">
+   <div id="charms" class="win-ui-dark slide">
    
       <div id="theme-charms-section" class="charms-section">
          <div class="charms-header">
-            <a href="#" class="close-charms win-command">
-               <span class="win-commandimage win-commandring">&#xe05d;</span>
-            </a>
+            <a href="#" class="close-charms win-backbutton"></a>
             <h2>Settings</h2>
          </div>
    
@@ -282,7 +297,6 @@
                <form class="">
                   <label for="win-theme-select">Change theme:</label>
                   <select id="win-theme-select" class="">
-                     <option value="metro-ui-semilight">Semi-Light</option>
                      <option value="metro-ui-light">Light</option>
                      <option value="metro-ui-dark">Dark</option>
                   </select>
