--- a/javascript.html
+++ b/javascript.html
@@ -1757,55 +1757,16 @@
              </table>
            </section>
    
-           <section id="datepicker">
-              <div class="page-header">
-                 <h1>DatePicker <small></small></h1>
-              </div>
-               <p>Code from: <a href="http://www.eyecon.ro/bootstrap-datepicker/">http://www.eyecon.ro/bootstrap-datepicker/</a></p>
-   
-              <p>Attached to a field with the format specified via options.</p>
-              <div class="bs-docs-example">
-                 <input type="text" id="dp1" value="02-16-2012" class="span2 datepicker">
-              </div>
-   <pre class="prettyprint linenums">
-   &lt;input type="text" id="dp1" value="02-16-2012" class="span2 datepicker"&gt;
-   </pre>
-   
-              <p>Attachet to a field with the format specified via data tag.</p>
-              <div class="bs-docs-example">
-                 <input type="text" id="dp2" data-date-format="mm/dd/yy" value="02/16/12" class="span2 datepicker">
-              </div>
-   <pre class="prettyprint linenums">
-   &lt;input type="text" id="dp2" data-date-format="mm/dd/yy" value="02-16-2012" class="span2 datepicker"&gt;
-   </pre>
-   
-              <p>As component.</p>
-              <div class="bs-docs-example">
-                 <div data-date-format="dd-mm-yyyy" data-date="12-02-2012" id="dp3" class="input-append datepicker">
-                    <input type="text" readonly="" value="12-02-2012" size="16" class="span2">
-                    <span class="add-on"><i class="icon-calendar"></i></span>
-                 </div>
-              </div>
-   <pre class="prettyprint linenums">
-   &lt;div data-date-format="dd-mm-yyyy" data-date="12-02-2012" id="dp3" class="input-append datepicker"&gt;
-      &lt;input type="text" readonly="" value="12-02-2012" size="16" class="span2"&gt;
-      &lt;span class="add-on"&gt;&lt;i class="icon-calendar"&gt;&lt;/i&gt;&lt;/span&gt;
-      &lt;/div&gt;
-   </pre>
-   
-           </section>
    
          </div>
        </div>
    
      </div>
-   <div id="charms" class="win-ui-dark">
+   <div id="charms" class="win-ui-dark slide">
    
       <div id="theme-charms-section" class="charms-section">
          <div class="charms-header">
-            <a href="#" class="close-charms win-command">
-               <span class="win-commandimage win-commandring">&#xe05d;</span>
-            </a>
+            <a href="#" class="close-charms win-backbutton"></a>
             <h2>Settings</h2>
          </div>
    
@@ -1815,7 +1776,6 @@
                <form class="">
                   <label for="win-theme-select">Change theme:</label>
                   <select id="win-theme-select" class="">
-                     <option value="metro-ui-semilight">Semi-Light</option>
                      <option value="metro-ui-light">Light</option>
                      <option value="metro-ui-dark">Dark</option>
                   </select>
